<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_MachineMode" Id="{41bd0241-d680-4231-9435-219ccef860f0}">
    <Declaration><![CDATA[TYPE ST_MachineMode :
STRUCT
	(* Operation Mode *)
	Standby			: BOOL;
	Manual			: BOOL;
	MDI				: BOOL;
	Automatic		: BOOL;
	Homing			: BOOL;

	(* Operation State *)
	Start				: BOOL;
	Stop				: BOOL;
	Reset				: BOOL;
	Error				: BOOL;

	(* Special functions *)
	DoSingleBlock	: BOOL;
	SingleBlock		: BOOL;
    FeedHold			: BOOL;
	Backward			: BOOL;
	PrgBlockIgnore	: BOOL;
	M01Stop			: BOOL;
	//BlockSearch		: ST_BlockSearch;
	//SyntaxCheck    : ST_SyntaxCheck;
	ManualMode     : ST_ManualMode;

	(* Strings *)
	ProgramName		: STRING(1024);
	MDIString		: STRING(1024);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>